--- a/api_reference.yaml
+++ b/api_reference.yaml
@@ -21,7 +21,7 @@ info:
         1. Install Crest using python package manager (Make sure pip is installed in your system).
         
         ```python 
-        pip install crest
+        pip install pythoncrest
         ```
 
         ### To use Crest as a Service
