--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Copyright 2020-2021 VMware, Inc.
+# Copyright 2020 VMware, Inc.
 # SPDX-License-Identifier: MIT
 selenium>=3.141.0
 requests>=2.24.0
