--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,9 @@
-# Copyright 2020-2021 VMware, Inc.
+# Copyright 2020-2023 VMware, Inc.
 # SPDX-License-Identifier: MIT
 [metadata]
 description-file = README.md
 license_file = LICENSE
+
+[tool:pytest]
+testpaths = tests
+pythonpath = src
